# multiagent-fipa_services

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  DistributedServiceDirectory.cpp  DistributedServiceDirectory.hpp  ErrorHandling.hpp  FipaServices.hpp  Main.cpp  MessageTransport.cpp  MessageTransport.hpp  MessageTransportService.cpp  MessageTransportService.hpp  ServiceDirectory.cpp  ServiceDirectory.hpp  ServiceDirectoryEntry.cpp  ServiceDirectoryEntry.hpp  ServiceLocator.cpp  ServiceLocator.hpp  SocketTransport.cpp  SocketTransport.hpp
src/transports/: Address.cpp  Address.hpp  Configuration.cpp  Configuration.hpp  Connection.cpp  Connection.hpp  OutgoingConnection.cpp  OutgoingConnection.hpp  Transport.cpp  Transport.hpp
src/transports/tcp/: OutgoingConnection.cpp  OutgoingConnection.hpp  SocketTransport.cpp  SocketTransport.hpp  TCPTransport.cpp  TCPTransport.hpp
src/transports/udt/: IncomingConnection.cpp  IncomingConnection.hpp  OutgoingConnection.cpp  OutgoingConnection.hpp  UDTTransport.cpp  UDTTransport.hpp
test/: CMakeLists.txt  DistributedServiceDirectoryTest.cpp  MessageTransportTest.cpp  ServiceDirectoryTest.cpp  TCPTransportTest.cpp  Test.cpp  UDTTransportTest.cpp  distributed_service_directory_test.cpp  message_transport_test.cpp  service_directory_test.cpp  udt_transport_test.cpp
